# NetTraining

./: .gitignore  README.md  pyproject.toml
src/NetTrainer/: __init__.py  trainer.py
src/RegressionTrainer/: __init__.py  trainer.py  utils.py
