[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trainerlib"
version = "0.1.0"
description = "Simple PyTorch training helper"
authors = [{name = "Gabriel Vinícius da Maia", email = "gabrielvinicius.damaia@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "matplotlib>=3.7.0"
]

[project.urls]
Homepage = "https://github.com/Gabriel-V-Maia/NetTraining"

